Funciona MongoDb, Agrego SlicGrid no anda todavia
Ya va  a funcar la cosa esta

--- a/dondEducar/dondEducar/Views/Home/About.cshtml
+++ b/dondEducar/dondEducar/Views/Home/About.cshtml
@@ -32,3 +32,21 @@
         <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
     </ul>
 </aside>
+
+@* grid *@
+<div id="gridEscuelas" class="grid"></div>
+@* /grid *@
+
+<script type="text/javascript">
+    $(document).ready(function () {
+
+        //>>>Ventas
+        $.getJSON("@Url.Action("GetEscuelas")", { tagId: 1 }, function (data) {       
+            $("#gridEscuelas").slickgrid({
+                columns: EDUCAR.Grids.ColumnasEscuelas,
+                data: data,
+                slickGridOptions: EDUCAR.Grids.DefaultSlickGridOptions
+            });//<<<slickgrid            
+        });
+    });//<<<ready
+</script>
