--- a/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
+++ b/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     @Scripts.Render("~/bundles/slickgrid")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/underscore")
     @Scripts.Render("~/bundles/educar")
     <head>
         <meta charset="utf-8" />
