--- a/dondEducar/dondEducar/Views/Home/Establecimientos.cshtml
+++ b/dondEducar/dondEducar/Views/Home/Establecimientos.cshtml
@@ -1,60 +1,31 @@
-﻿@{
+﻿@model string
+@{
     ViewBag.Title = "Establecimientos";
 }
 
 <hgroup class="title">
     <h1>@ViewBag.Title.</h1>
-    <h2>@ViewBag.Message</h2>
 </hgroup>
 
-<div class="widget-content">
-    @using (Html.BeginForm("Importar", "Home", FormMethod.Post, new { id = "importarForm", name = "importarForm", enctype = "multipart/form-data" }))
-    {
-        <div id="archivoExcel" class="input-block-level">
-            @*real file input*@
-            <input type="file" id="fileUpload" name="fileUpload" class="input-xxlarge file" onchange="checkExtension(this.value)" />
-            <button type="submit" class="btn btn-primary">Importar</button>
-            @Html.ValidationSummary()
-        </div>
-    }
-</div>
 
 @* grid *@
-<div id="gridEscuelas" style="height: 500px;"></div>
+<div id="gridEscuelas"></div>
+ <div id="pager" style="width:100%;height:20px;"></div> 
 @* /grid *@
 
 <script type="text/javascript">
-  
+  $(document).ready(function () {
+      $.getJSON("@Url.Action("GetEscuelas")", { valorDelTag: '@Model' }, function (data) {
 
-    @*valida la extension del archivo que se esta por importar*@
-    function checkExtension(filename) {
-        if ($.inArray(filename.split('.').pop(), ['csv']) != -1) {
-            $("#formSubmit").removeAttr("disabled");
-            $("#mockFileUpload").val(filename);
-            return true;
-        } else {
-            EDUCAR.Modals.error("Solo se pueden importar archivos cuya extensión sea <b>'.csv'</b>.<br />Por favor revise el archivo a importar.");
-            $("#mockFileUpload").val("");
-            $("#fileUpload").val("");
-            $("#formSubmit").attr("disabled", "disabled");
-            return false;
-        }
-    }
+          var dataView = new Slick.Data.DataView();
+          dataView.setPagingOptions({
+              pageSize: 25,
+          });
+          
+          var grid = new Slick.Grid("#gridEscuelas", data, EDUCAR.Grids.ColumnasEscuelas, EDUCAR.Grids.SlickGridOptions);
+        
+          var pager = new Slick.Controls.Pager(dataView, grid, $("#pager"));
 
-    @*on submit file*@
-    $("#importarForm").submit(function (event) {
-        if ($("#fileUpload").val() == "") {
-            EDUCAR.Modals.error("No se seleccionó un archivo.<br />Por favor revise el archivo a importar.");
-            event.preventDefault();
-            return false;
-        }
-
-    });
-    
-    $(document).ready(function () {
-        $.getJSON("@Url.Action("GetEscuelas")", { tagId: 1 }, function (data) {
-            var grid = new Slick.Grid("#gridEscuelas", data, EDUCAR.Grids.ColumnasEscuelas, EDUCAR.Grids.DefaultSlickGridOptions);
-            console.log(data);
         });
     });
 </script>
