--- a/dondEducar/dondEducar/Views/Home/Establecimientos.cshtml
+++ b/dondEducar/dondEducar/Views/Home/Establecimientos.cshtml
@@ -1,17 +1,107 @@
 ﻿@model string
-@{
-    ViewBag.Title = "Establecimientos";
-}
-
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
 
 
-@* grid *@
-<div id="gridEscuelas"></div>
- <div id="pager" style="width:100%;height:20px;"></div> 
-@* /grid *@
+    <aside role="complementary" class="sidebar">
+		<div class="wrapper">
+
+			<div id="design-selection" class="design-selection">
+				<h3 class="select">Select a Design:</h3>
+				<nav role="navigation">
+					<ul>
+					<li>
+						<a class="design-name" href="?cssfile=/215/215.css">A Robot Named Jimmy</a> by						<a class="designer-name" href="http://meltmedia.com/">meltmedia</a>
+					</li>					<li>
+						<a class="design-name" href="?cssfile=/214/214.css">Verde Moderna</a> by						<a class="designer-name" href="http://www.mezzoblue.com/">Dave Shea</a>
+					</li>					<li>
+						<a class="design-name" href="?cssfile=/213/213.css">Under the Sea!</a> by						<a class="designer-name" href="http://www.ericstoltz.com/">Eric Stoltz</a>
+					</li>					<li>
+						<a class="design-name" href="?cssfile=/212/212.css">Make ’em Proud</a> by						<a class="designer-name" href="http://skybased.com/">Michael McAghon and Scotty Reifsnyder</a>
+					</li>					<li>
+						<a class="design-name" href="?cssfile=/211/211.css">Orchid Beauty</a> by						<a class="designer-name" href="#">Kevin Addison</a>
+					</li>					<li>
+						<a class="design-name" href="?cssfile=/210/210.css">Oceanscape</a> by						<a class="designer-name" href="http://www.pixel-house.com.au/">Justin Gray</a>
+					</li>					<li>
+						<a class="design-name" href="?cssfile=/209/209.css">CSS Co., Ltd.</a> by						<a class="designer-name" href="http://www.benklemm.de/">Benjamin Klemm</a>
+					</li>					<li>
+						<a class="design-name" href="?cssfile=/208/208.css">Sakura</a> by						<a class="designer-name" href="#">Tatsuya Uchida</a>
+					</li>					</ul>
+				</nav>
+			</div>
+
+			<div id="design-archives" class="design-archives">
+				<h3 class="archives">Archives:</h3>
+				<nav role="navigation">
+					<ul>
+						<li class="next">
+							<a href="?cssfile=181/181.css&amp;page=1">
+								Next Designs <span class="indicator">›</span>
+							</a>
+						</li>
+						<li class="viewall">
+							<a title="View every submission to the Zen Garden." href="http://www.mezzoblue.com/zengarden/alldesigns/">
+								View All Designs							</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+
+			<div id="zen-resources" class="zen-resources">
+				<h3 class="resources">Resources:</h3>
+				<ul>
+					<li class="view-css">
+						<a title="View the source CSS file of the currently-viewed design." href="181/181.css">
+							View This Design’s <abbr title="Cascading Style Sheets">CSS</abbr>						</a>
+					</li>
+					<li class="css-resources">
+						<a title="Links to great sites with information on using CSS." href="http://www.mezzoblue.com/zengarden/resources/">
+							<abbr title="Cascading Style Sheets">CSS</abbr> Resources						</a>
+					</li>
+					<li class="zen-faq">
+						<a title="A list of Frequently Asked Questions about the Zen Garden." href="http://www.mezzoblue.com/zengarden/faq/">
+							<abbr title="Frequently Asked Questions">FAQ</abbr>						</a>
+					</li>
+					<li class="zen-submit">
+						<a title="Send in your own CSS file." href="http://www.mezzoblue.com/zengarden/submit/">
+							Submit a Design						</a>
+					</li>
+					<li class="zen-translations">
+						<a title="View translated versions of this page." href="http://www.mezzoblue.com/zengarden/translations/">
+							Translations						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</aside>
+
+    <section id="zen-intro" class="intro">
+		<header role="banner">
+			<h1>CSS Zen Garden</h1>
+			<h2>The Beauty of <abbr title="Cascading Style Sheets">CSS</abbr> Design</h2>
+		</header>
+
+		<div role="article" id="zen-summary" class="summary">
+			<p>@Model</p>
+		</div>
+
+		<div role="article" id="zen-preamble" class="preamble">
+			<h3>The Road to Enlightenment</h3>
+			<p>Littering a dark and dreary road lay the past relics of browser-specific tags, incompatible <abbr title="Document Object Model">DOM</abbr>s, broken <abbr title="Cascading Style Sheets">CSS</abbr> support, and abandoned browsers.</p>
+			<p>We must clear the mind of the past. Web enlightenment has been achieved thanks to the tireless efforts of folk like the <abbr title="World Wide Web Consortium">W3C</abbr>, <abbr title="Web Standards Project">WaSP</abbr>, and the major browser creators.</p>
+			<p>The CSS Zen Garden invites you to relax and meditate on the important lessons of the masters. Begin to see with clarity. Learn to use the time-honored techniques in new and invigorating fashion. Become one with the web.</p>
+		</div>
+	</section>
+
+	<div role="main" id="zen-supporting" class="main supporting">
+		<div role="article" id="zen-explanation" class="explanation">
+			<h3>So What is This About?</h3>
+			    @* grid *@
+                <div id="gridEscuelas"></div>
+                <div id="pager" style="width:100%;height:20px;"></div> 
+                @* /grid *@
+		</div>
+	</div>
+
+
 
 <script type="text/javascript">
   $(document).ready(function () {
