--- a/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
+++ b/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
 <html lang="as-AR">
-    @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/themes/base/css")
     @Styles.Render("~/Content/bootstrap")
     @Styles.Render("~/Content/SlickGrid")
+    @Styles.Render("~/Content/css")
     
 
 
@@ -22,33 +22,23 @@
     <body>
         <header>
             <div class="content-wrapper">
-                <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
-                </div>
-                <div class="float-right">
-                    <nav>
-                        <ul id="menu">
-                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li>@Html.ActionLink("Establecimientos", "Establecimientos", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                        </ul>
-                    </nav>
-                </div>
             </div>
         </header>
-        <div id="body">
+        <div id="body" class="content-wrapper">
             @* modal *@
             <div id="educarModal" class="modal hide fade"></div>
-            @RenderSection("featured", required: false)
-            <section class="content-wrapper main-content clear-fix">
-                @RenderBody()
-            </section>
+            @RenderBody()
         </div>
         <footer>
             <div class="content-wrapper">
-                <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - My ASP.NET MVC Application</p>
-                </div>
+			<a class="zen-validate-html" title="Check the validity of this site’s HTML" href="http://validator.w3.org/check/referer">HTML</a>
+			<a class="zen-validate-css" title="Check the validity of this site’s CSS" href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>
+			<a class="zen-license" title="View the Creative Commons license of this site: Attribution-NonCommercial-ShareAlike." href="http://creativecommons.org/licenses/by-nc-sa/3.0/">CC</a>
+			<a class="zen-accessibility" title="Read about the accessibility of this site" href="http://mezzoblue.com/zengarden/faq/#aaa">A11y</a>
+			<a class="zen-github" title="Fork this site on Github" href="https://github.com/mezzoblue/csszengarden.com">GH</a>
+            <div class="float-left">
+                <p>&copy; @DateTime.Now.Year - Bs Apps</p>
+            </div>
             </div>
         </footer>
 
