--- a/dondEducar/dondEducar/Views/Home/Index.cshtml
+++ b/dondEducar/dondEducar/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
 
 
     <aside role="complementary" class="sidebar">
-		<div class="wrapper">
+		<div class="content-wrapper">
 
 			<div id="design-selection" class="design-selection">
 				<h3 class="select">Select a Design:</h3>
