--- a/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
+++ b/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
@@ -2,7 +2,8 @@
 <html lang="as-AR">
     @Styles.Render("~/Content/themes/base/css")
     @Styles.Render("~/Content/bootstrap")
-    @Styles.Render("~/Content/SlickGrid")
+    @Styles.Render("~/Content/slickgrid")
+    @Styles.Render("~/Content/metro")
     @Styles.Render("~/Content/css")
     
     @Scripts.Render("~/bundles/jquery")
@@ -39,4 +40,5 @@
         </footer>
 
     </body>
+    
 </html>
