--- a/dondEducar/dondEducar/Views/Home/Index.cshtml
+++ b/dondEducar/dondEducar/Views/Home/Index.cshtml
@@ -1,12 +1,20 @@
-﻿@model dondEducar.ViewModel.IndexViewModel
+﻿
+<h2>dondEducar.com</h2>
 
-<ul class="menu">
-    @foreach(var nivel in Model.NivelesEducativos)
-    {
-        <li class="">
-            <a href='@Url.Action("Establecimientos", new {nivelEducativo = nivel.Valor})'>@nivel.Vista</a>
-        </li>
-    }
-</ul>
+<br />
+<div class="center">
+    <a  class="m-btn big blue rnd" href='@Url.Action("Establecimientos", new {nivelEducativo = "Inicial"})'>Inicial</a>    
+    
+    <a  class="m-btn big red rnd" href='@Url.Action("Establecimientos", new {nivelEducativo = "Primario"})'>Primario</a>    
+    
+    <a  class="m-btn big purple rnd" href='@Url.Action("Establecimientos", new {nivelEducativo = "Secunadrio"})'>Secundario</a>    
+</div>
 
+<div class="center">
+    <a  class="m-btn big black rnd" href='@Url.Action("Establecimientos", new {nivelEducativo = "Superior"})'>Superior</a>    
+    
+    <a  class="m-btn big green rnd" href='@Url.Action("Establecimientos", new { nivelEducativo = "Otros" })'>Otros</a>    
+</div>
+
+<br />
 <a href='@Url.Action("Importar","Importar")' class="btn btn-primary">Importar Datos</a>
